split Isource
