# PlaylistChaser.Api/Controllers/Sources/SourcesHelper.cs
@@ -1,5 +1,6 @@
 ﻿using PlaylistChaser.Core.Sources;
 using PlaylistChaser.Model.BuiltInIds;
+using System.Reflection;
 
 namespace PlaylistChaser.Api.Controllers.Sources
 {
@@ -19,10 +20,25 @@ namespace PlaylistChaser.Api.Controllers.Sources
             return type;
 
         }
-        public static ISource GetApiHelper(this SourceId sourceId, string accessToken)
+        public static T GetApiHelper<T>(this SourceId sourceId, string accessToken) where T : ISourceBase
         {
             var type = GetApiHelperType(sourceId);
-            return (ISource)Activator.CreateInstance(type, new object[] { accessToken });
+            return (T)Activator.CreateInstance(type, new object[] { accessToken });
         }
+    }
+    public class SourcesHelper<T>
+    {
+        public virtual List<SourceId> GetValidSourceIds()
+        {
+            Assembly assembly = Assembly.GetExecutingAssembly();
+            IEnumerable<Type> sourceImplementations = assembly.GetTypes().Where(t => typeof(ISource).IsAssignableFrom(t) && t.IsClass);
+            var sourceIds = sourceImplementations.Select(type => ((ISource)Activator.CreateInstance(type)).SourceId).ToList();
+            return sourceIds;
+        }
+
+        //public virtual T GetApiHelper()
+        //{
+        //    return (T)Activator.CreateInstance(typeof(T), new object[] { });
+        //}
     }
 }
